Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2563

"Build debugging helpers" seems to fail when only qmldump could not be built

XMLWordPrintable

    • 646ec206330fa835233b4492491a994b64ee9bb3

      Maemo users currently have to build the C++ debugging helpers, because the gdb there has no Python support. When they click on "Rebuild" in the Qt versions dialog, they get what seems to be an error indication, because qmldump could not be built. However, that tool is not relevant to pure C++ debugging, and that should be made more clear. Also, the entry third column of the Qt version changes to a horizontal red line, whose meaning is unclear.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ckamm Christian Kamm
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes