Debugging helpers: Only fail if there was a chance of success.

Task-number: QTCREATORBUG-2563
Reviewed-by: Kai Koehne